--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "concurrently": "^7.3.0",
     "cors": "^2.8.5",
     "csv-writer": "^1.6.0",
     "express": "^4.16.4",
