--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-scripts": "2.1.1",
     "react-strap": "0.0.1",
     "react-toastify": "^4.4.2",
-    "reactstrap": "^6.5.0"
+    "reactstrap": "^6.5.0",
+    "pdf-parse": "^1.1.1"
   },
   "scripts": {
     "start": "concurrently --kill-others \"react-scripts start\" \"node server.js\"",
